Code improvements and bug fixes.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 /.idea/
+/etc/*.kubeconfig
+/etc/controller.yaml
+/etc/demo/.env
+/etc/demo/frontend/conf.d/.htpasswd
+/etc/demo/frontend/tls/certs/fullchain.pem
+/etc/demo/frontend/tls/private/privkey.pem
+/etc/demo/frontend/.htpasswd
+/etc/manager.yaml
+/etc/project.yaml
+/etc/slice.yaml
+/etc/*-sliceOperator.yaml
+/etc/*-worker.yaml
 /iac/.terraform*
 /iac/terraform.tfvars
-/etc/*.kubeconfig
-/etc/*.yaml
+/iac/terraform.tfstate*
 /README.txt
